# ckan

./: MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
ckanext/personal_database_population/: plugin.py
ckanext/personal_database_population/assets/: custom-css.css  custom-javascript.js  webassets.yml
ckanext/personal_database_population/templates/: base.html
ckanext/personal_database_population/templates/organization/: error_connection.html  error_name.html  error_query.html  read_base.html  upload_database.html
ckanext/personal_database_population/tests/: test_plugin.py
ckanext_personal_database_population.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
