[metadata]
name = ckanext-personal_database_population
version = 0.0.1
description = The aim of the project is to give the ability to a company to easily upload their data from a personal database without the need to add every data by itself.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TudicEdward/ckanext-personal_database_population
author = Edward Tudic
author_email = roberttudic3@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN database query sql personal upload

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             personal_database_population = ckanext.personal_database_population.plugin:PersonalDatabasePopulationPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/personal_database_population/i18n/ckanext-personal_database_population.pot
width = 80

[init_catalog]
domain = ckanext-personal_database_population
input_file = ckanext/personal_database_population/i18n/ckanext-personal_database_population.pot
output_dir = ckanext/personal_database_population/i18n

[update_catalog]
domain = ckanext-personal_database_population
input_file = ckanext/personal_database_population/i18n/ckanext-personal_database_population.pot
output_dir = ckanext/personal_database_population/i18n
previous = true

[compile_catalog]
domain = ckanext-personal_database_population
directory = ckanext/personal_database_population/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
